//***************
//Version History
//***************
[5.0.3]
+ Bug Fix: Simplified logic in the ProgressListener routines that caused search terms to occasionally be removed in some circumstances

[5.0.2]
+ Bug Fix: Fixed an issue caused by a change in Firefox 31 that prevented search suggestions from being clicked

[5.0.1]
+ Bug Fix: Implemented a workaround to prevent the search site button, up button, and Google Dictionary menu item from getting stuck in the "disabled" state

[5.0.0]
+ Google search suggestions are now offered when typing in the Googlebar Lite search box
+ Searches are now performed over secure (https) connections by default
+ Added an option to control the search suggestions feature (suggestions are enabled by default)
+ Added an option to lock the search box width
+ Internal search URLs have been tweaked
+ Improved the efficiency of the window resize event listener
+ Removed the option to enable secure search since it is now enabled by default
+ Changed the minimum width of the search box from 150 to 100 pixels
+ Removed several deprecated strings
+ Removed the nb-NO locale due to it being woefully out of date
+ Bug Fix: The search word overflow button is now hidden properly if it was visible and search words were turned off
+ Bug Fix: The search word container is now resized properly if search words buttons were present and then turned off

[4.9.15]
+ Restored the resize gripper

[4.9.14]
+ Bug Fix: Search terms should no longer be duplicated when they already exist in the search history
+ Bug Fix: The Googlebar Lite toolbar should now look better when using large icons

[4.9.13]
+ Improved the look and feel of the search box on Windows and Linux
+ Replaced the custom clear search history confirmation dialog with a built-in one from nsIPromptService
+ Added a couple of extra presets to the search box width option
+ Search box width presets now list their width in pixels